--- a/package.json
+++ b/package.json
@@ -1,32 +1,43 @@
 {
   "private": true,
   "scripts": {
-    "start": "roadhog server",
-    "build": "roadhog build",
-    "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint"
-  },
-  "engines": {
-    "install-node": "6.9.2"
+    "start": "umi dev",
+    "build": "umi build",
+    "test": "umi test",
+    
+    "lint": "eslint --ext .js src mock tests",
+    
+    
+    "precommit": "lint-staged"
   },
   "dependencies": {
-    "babel-runtime": "^6.9.2",
-    "dva": "^1.2.1",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    
+    
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-dva-hmr": "^0.3.2",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0",
-    "expect": "^1.20.2",
-    "husky": "^0.12.0",
-    "redbox-react": "^1.4.3",
-    "roadhog": "^1.1.1"
+    
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.4.0",
+    "eslint-config-umi": "^1.4.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.2",
+    "react-test-renderer": "^16.7.0",
+    
+    "umi": "^2.6.3",
+    "umi-plugin-react": "^1.6.0"
+    
+    },
+  "lint-staged": {
+    
+    "*.{js,jsx}": ["eslint --fix", "git add"]
+  },
+  "engines": {
+    "node": ">=8.0.0"
   }
 }
