--- a/package.json
+++ b/package.json
@@ -4,38 +4,38 @@
     "start": "umi dev",
     "build": "umi build",
     "test": "umi test",
-    
-    "lint": "eslint --ext .js src mock tests",
-    
-    
+    "lint": "eslint --ext .js src --fix",
     "precommit": "lint-staged"
   },
   "dependencies": {
-    
-    
+    "antd": "^3.16.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    
     "babel-eslint": "^9.0.0",
-    "eslint": "^5.4.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-react-app": "^4.0.0",
     "eslint-config-umi": "^1.4.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-flowtype": "^3.6.1",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "prettier": "^1.17.0",
     "react-test-renderer": "^16.7.0",
-    
     "umi": "^2.6.3",
     "umi-plugin-react": "^1.6.0"
-    
-    },
+  },
   "lint-staged": {
-    
-    "*.{js,jsx}": ["eslint --fix", "git add"]
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "engines": {
     "node": ">=8.0.0"
