--- a/Intelligent-pension/package.json
+++ b/Intelligent-pension/package.json
@@ -15,6 +15,7 @@
     "echarts-for-react": "^2.0.11",
     "echarts-gl": "^1.1.1",
     "echarts-liquidfill": "^2.0.2",
+    "eslint-config-airbnb": "^17.1.0",
     "highcharts-exporting": "^0.1.7",
     "highcharts-more": "^0.1.7",
     "jsonp": "^0.2.1",
@@ -35,10 +36,11 @@
     "recharts": "^1.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-module-resolver": "^3.1.0",
     "cross-env": "^5.1.6",
-    "eslint": "^5.4.0",
+    "eslint": "^5.16.0",
     "eslint-config-umi": "^0.1.4",
     "eslint-plugin-flowtype": "^2.48.0",
     "eslint-plugin-import": "^2.12.0",
